Fixed width general section safari

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -124,12 +124,12 @@ input {
 	display: flex;
 	flex-flow: row;
 	font-size: calc(var(--page-font-size) * 0.7);
-	max-width: 60vw;
+	max-width: 80vw;
 	.image-container {
 		padding: 15px;
 	}
 	.text-container {
-		max-width: 35vw;
+		max-width: 50vw;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
